--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,11 @@
         android:layout_height="wrap_content"
         android:text="设备信息"
         android:textSize="20sp"/>
+
+    <Button
+        android:id="@+id/tts_switch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="语音播报：关闭"
+        android:textSize="20sp"/>
 </LinearLayout>
